--- a/index.html
+++ b/index.html
@@ -3,31 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>輪流連結網站</title>
+    <title>連結網站</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+       body {
             margin: 0;
-            padding: 20px;
-            text-align: center;
+            height: 100vh;
+            display: flex;
+            flex-direction: column; /* 讓內容垂直排列 */
+            justify-content: flex-start; /* 垂直對齊到上方 */
+            align-items: center; /* 水平置中 */
+            background-color: #f4f4f4; /* 背景顏色 */
         }
 
-        #switchLink {
+        /* 第一段文字的樣式 */
+        .text1 {
             font-size: 20px;
-            color: blue;
-            text-decoration: none;
-            cursor: pointer;
+            margin-top: 20px; /* 距離頁面頂部的間距 */
+            text-align: center; /* 文字置中 */
+            color: #333;
         }
 
-        #switchLink:hover {
-            text-decoration: underline;
+        /* 按鈕樣式 */
+        .button {
+            background-color: #ff842d; /* 按鈕背景顏色 */
+            color: white; /* 文字顏色 */
+            padding: 15px 32px; /* 內邊距 */
+            text-align: center; /* 文字置中 */
+            text-decoration: none; /* 去除下劃線 */
+            display: inline-block; /* 使其為內聯塊級元素 */
+            font-size: 16px; /* 文字大小 */
+            border: none; /* 去掉邊框 */
+            border-radius: 8px; /* 圓角邊框 */
+            cursor: pointer; /* 顯示點擊手指 */
+            transition: background-color 0.3s ease; /* 背景顏色過渡效果 */
+            margin-top: 20px; /* 按鈕與上一段文字的間距 */
+        }
+
+        /* 按鈕懸停時的顏色 */
+        .button:hover {
+            background-color: #fb6a02;
+        }
+
+        /* 按鈕被點擊時的顏色 */
+        .button:active {
+            background-color: #fb6a02;
+        }
+
+        /* 第二段文字的樣式（如果有） */
+        .text2 {
+            font-size: 20px;
+            margin-top: 20px; /* 調整與按鈕的間距 */
+            text-align: center;
+            color: #555;
         }
     </style>
 </head>
 <body>
-    <h1>點擊下方連結，輪流切換網站</h1>
-    <a href="#" id="switchLink" onclick="switchLink(); return false;">點我切換網站</a>
-
+     
+    <h2>點擊下方按鈕，進入問卷</h2>
+    <a href="#" id="switchLink" onclick="switchLink(); return false;"class="button">點我進入問卷</a>
+   
     <script>
         // 設定網站 A 和 B 的 URL
         const siteA = "https://lsurvey.nccu.edu.tw/limesurvey/index.php/336131?lang=zh-Hant-TW"; // 請替換為你自己的網站 A
